fix overlapping title and close button

--- a/src/components/projects/projectListItem.scss
+++ b/src/components/projects/projectListItem.scss
@@ -30,6 +30,7 @@
   &__title {
     position: relative;
     padding-left: 2rem;
+    margin-right: 2rem;
   }
 
   &__toggleDetailButton {
